[package]
name = "quiche-h3"
version = "0.0.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "An h3::quic bridge that runs hyperium h3 over Cloudflare quiche via tokio-quiche"
readme = "../README.md"
# MSRV: the lower bound exercised by CI (.github/workflows/build.yaml).
rust-version = "1.90"
keywords = ["http3", "quic", "h3", "quiche", "tokio-quiche"]
categories = ["network-programming", "asynchronous", "web-programming"]

# Production dependencies inherit their versions from `[workspace.dependencies]`
# (design §10 version policy). tokio enables only the features the worker needs.
[dependencies]
tokio-quiche.workspace = true
h3.workspace = true
bytes.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
rcgen.workspace = true
futures.workspace = true
# Test-only: `h3` does not re-export `http`, so the end-to-end loopback tests
# depend on it directly to build `http::Request`/`Response` and read status
# codes. Dev-only scope leaves the production dependency set unchanged.
http.workspace = true
# Test-only: exposes h3's `proto`/`frame` modules so unit tests can construct
# `h3::quic::WriteBuf` fixtures. Dev-dependency scope leaves the production
# public API and non-test builds unchanged.
h3 = { workspace = true, features = [
    "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
] }

[features]
default = []
# Instrumentation, mirroring msquic-h3.
tracing = ["dep:tracing"]
# Pass-through toggles for tokio-quiche congestion control / raw public keys.
gcongestion = ["tokio-quiche/gcongestion"]
rpk = ["tokio-quiche/rpk"]

# Document all optional features on docs.rs so `tracing`/`gcongestion`/`rpk`
# APIs are visible.
[package.metadata.docs.rs]
all-features = true
